fixed search form component's UI break on mobile

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -151,3 +151,7 @@ dialog {
     word-break: break-word;
   }
 }
+
+.search-form label > span {
+  @apply hidden;
+}
